# djangoldp-turtle

./: README.md  setup.cfg
djangoldp_turtle/: __init__.py  apps.py  views.py
djangoldp_turtle/tests/: __init__.py  apps.py  models.py  runner.py  tests_view.py  utils.py
