
[metadata]
name = djangoldp_turtle
version = attr: djangoldp_turtle.__version__
# url = https://git.startinblox.com/djangoldp-packages/djangoldp-circle
author = Multi-User Domain
author_email = calum@mackervoy.com
description = djangoldp package for rendering and parsing Turtle content
license = MIT

[options]
packages = find:
install_requires =
    djangoldp>=2.1
    rdflib
    rdflib-jsonld

[semantic_release]
version_source = tag
version_variable = djangoldp_turtle/__init__.py:__version__
commit_parser = commit_parser.parse
